# lele

./: .gitignore  Cargo.toml  README.md  build.rs  run_supertonic3.sh  run_yolo26.sh  run_yolo26n_seg.sh
benches/: bench_ort.py  kernels.rs  kernels_ort_compare.rs  lele_vs_ort.rs
crates/lele-build/: Cargo.toml
crates/lele-build/src/: lib.rs
docs/: LELE_VS_ORT.md
examples/: silero_bench.rs
examples/candle-benchmark/: Cargo.toml
examples/candle-benchmark/src/: main.rs
examples/sensevoice/: audio.rs  model.toml
examples/sensevoice/src/: lib.rs  main.rs
examples/sensevoice/tests/: e2e_test.rs
examples/silero/src/: lib.rs
examples/silero/tests/: e2e_test.rs
examples/supertonic/: audio.rs  processor.rs
examples/supertonic/src/: config.rs  main.rs
examples/supertonic3/: .gitignore  Cargo.toml  build.rs  model.toml
examples/supertonic3/src/: main.rs  processor.rs
examples/web-demo/: .gitignore  Cargo.toml  README.md  bench_node.mjs  build.rs  build_wasm.sh  package.json
examples/web-demo/.cargo/: config.toml
examples/web-demo/crates/sensevoice-wasm/: Cargo.toml  build.rs
examples/web-demo/crates/sensevoice-wasm/src/: lib.rs  tokenizer.rs
examples/web-demo/crates/supertonic-wasm/: Cargo.toml  build.rs
examples/web-demo/crates/supertonic-wasm/src/: audio.rs  lib.rs
examples/web-demo/crates/yolo26-wasm/: Cargo.toml  build.rs
examples/web-demo/crates/yolo26-wasm/src/: lib.rs
examples/web-demo/crates/yolo26n-seg-wasm/: Cargo.toml  build.rs
examples/web-demo/crates/yolo26n-seg-wasm/src/: image.rs  lib.rs
examples/web-demo/src/: audio.rs  config.rs  image.rs  lib.rs  processor.rs
examples/web-demo/web/: app.js  bench.html  bench.js  index.html  style.css
examples/yolo26/: .gitignore  Cargo.toml  build.rs  model.toml
examples/yolo26/src/: benchmark.rs  image.rs  lib.rs  main.rs
examples/yolo26/tests/: e2e_test.rs
examples/yolo26n-seg/: Cargo.toml  build.rs  model.toml
examples/yolo26n-seg/src/: benchmark.rs  image.rs  main.rs  yolo26seg.rs
scripts/: sensevoice_bench.py  silero_bench.py  supertonic_bench.py  yolo26_ort.py  yolo26n_seg_ort.py
src/: lib.rs  model.rs  onnx_proto_gen.rs  tensor.rs
src/compiler/: generate.rs  mod.rs  patterns.rs
src/compiler/ops/: activations.rs  control_flow.rs  math.rs  mod.rs  nn.rs  tensor.rs
src/compiler/snippets/: default_methods.rs
src/features/: cmvn.rs  fft.rs  lfr.rs  mod.rs  pipeline.rs  window.rs
src/kernels/: activations.rs  conv1d.rs  conv2d.rs  fft.rs  gemm.rs  manipulation.rs  math.rs  mod.rs  norm.rs  normalization.rs  pooling.rs  quantization.rs  rnn.rs  shape.rs  timing.rs  utils.rs  wasm_matmul.rs
src/kernels/avx/: conv1d.rs  conv2d.rs  math.rs  mod.rs  norm.rs  quantization.rs
src/kernels/neon/: gemm.rs  math.rs  mod.rs  normalization.rs  quantization.rs
src/kernels/wasm/: math.rs  mod.rs  norm.rs
tests/: kernel_accuracy.rs  regression_kernels.rs  verify_features.rs  verify_neon_accuracy.rs  verify_onnx.rs  verify_operators.rs
tools/kernel-bench/: Cargo.toml
tools/kernel-bench/src/: lib.rs  main.rs
tools/yolo26-wasm-bench/: Cargo.toml  build.rs
tools/yolo26-wasm-bench/src/: main.rs
