[workspace]
members = [
    ".",
    "crates/lele-build",
    "examples/sensevoice",
    "examples/silero",
    "examples/supertonic",
    "examples/yolo26",
    "examples/web-demo",
    "examples/web-demo/crates/sensevoice-wasm",
    "examples/web-demo/crates/yolo26-wasm",
    "examples/web-demo/crates/supertonic-wasm",
]
resolver = "2"

[workspace.dependencies]
lele = { path = "." }
lele-build = { path = "crates/lele-build" }
toml = "0.9.8"
anyhow = "1.0"

[package]
name = "lele"
version = "0.1.3"
edition = "2024"
description = "Bare-metal machine learning inference library in Rust"
license = "MIT"
repository = "https://github.com/miuda-ai/lele"
authors = ["jinti <shenjindi@miuda.ai>"]
keywords = [
    "machine-learning",
    "inference",
    "onnx",
    "speech-synthesis",
    "text-to-speech",
]
categories = ["algorithms", "compilers"]

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
bytes = "1.11.1"
thiserror = "2"
byteorder = "1.5"
rustfft = "6.2"
libm = "0.2"
half = "2.7.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
faer = "0.24.0"
gemm = { version = "0.19.0", features = ["experimental-apple-amx"] }

[build-dependencies]
prost-build = "0.14.3"

[dev-dependencies]
approx = "0.5"
anyhow = "1.0"
test-log = "0.2"
env_logger = "0.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
regex = "1.10"
unicode-normalization = "0.1"
rand = "0.9.2"
rand_distr = "0.5.1"
faer = "0.24.0"
criterion = "0.5"

[[bench]]
name = "kernels"
harness = false

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
opt-level = 3

[target.'cfg(target_arch = "aarch64")'.rustflags]
rustflags = ["-Ctarget-cpu=native"]
