[workspace]
members = [
    ".",
    "crates/lele-build",
    "examples/sensevoice",
    "examples/silero",
    "examples/supertonic",
    "examples/supertonic3",
    "examples/yolo26",
    "examples/yolo26n-seg",
    "examples/web-demo",
    "examples/web-demo/crates/sensevoice-wasm",
    "examples/web-demo/crates/yolo26-wasm",
    "examples/web-demo/crates/yolo26n-seg-wasm",
    "examples/web-demo/crates/supertonic-wasm",
]
resolver = "2"

[workspace.dependencies]
lele = { path = "." }
lele-build = { path = "crates/lele-build" }
toml = "1.1.2"
anyhow = "1.0"

[package]
name = "lele"
version = "0.1.11"
edition = "2024"
description = "Bare-metal machine learning inference library in Rust"
license = "MIT"
repository = "https://github.com/miuda-ai/lele"
authors = ["jinti <shenjindi@miuda.ai>"]
keywords = [
    "machine-learning",
    "inference",
    "onnx",
    "speech-synthesis",
    "text-to-speech",
]
categories = ["algorithms", "compilers"]
exclude = [
    "build.rs",
    "benches/*",
    "examples/*",
    "tests/*",
    "fixtures/*",
    "scripts/*",
    "src/bin/*",
    "docs/*",
]
[features]
default = ["compiler"]
compiler = ["dep:prost", "dep:prost-types"]

[dependencies]
prost = { version = "0.14.3", optional = true }
prost-types = { version = "0.14.3", optional = true }
thiserror = "2"
byteorder = "1.5"
libm = "0.2"
half = "2.7.1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
faer = "0.24.0"
gemm = { version = "0.19.0", features = ["experimental-apple-amx"] }


[dev-dependencies]
approx = "0.5"
test-log = "0.2"
unicode-normalization = "0.1"
faer = "0.24.0"
criterion = "0.8.2"

[[bin]]
name = "lele_gen"
path = "src/bin/lele_gen.rs"
required-features = ["compiler"]

[[bench]]
name = "kernels"
harness = false

[profile.release]
debug = true
lto = "thin"
codegen-units = 1
opt-level = 3
