[package]
name = "supertonic3-example"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"

[[bin]]
name = "supertonic3"
path = "src/main.rs"

[dependencies]
lele = { workspace = true }
anyhow = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
unicode-normalization = "0.1"
rand = "0.8"
rand_distr = "0.4"
regex = "1.0"

[build-dependencies]
lele-build = { workspace = true }
