[package]
name = "yolo26-wasm"
version = "0.1.0"
edition = "2021"
publish = false
build = "build.rs"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O3']

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lele = { workspace = true }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1"

[build-dependencies]
lele-build = { workspace = true }
